--- a/Atividade5.ipynb
+++ b/Atividade5.ipynb
@@ -135,22 +135,21 @@
         "\n",
         "#To do  \n",
         "def dijkstra(G,v,u):\n",
-        "  P = dict()\n",
-        "  H = [(v, None, 0)]\n",
-        "  while H:\n",
-        "      [x, p, dist_xv] = H.pop(0)\n",
-        "      if x == u:\n",
-        "          P[x] = [p, dist_xv]\n",
-        "          return shortestPath(v,u,P)\n",
-        "      if not x in P:\n",
-        "          P[x] = [p, dist_xv]\n",
-        "          for t in G.adjacents(x): \n",
-        "              dist_vt = dist_xv + G.getEdge(x,t)\n",
-        "              if not t in P or dist_vt < P[t][1]:\n",
-        "                  H.append((t, x, dist_vt)) \n",
+        "    P = dict()\n",
+        "    H = []\n",
+        "    heappush(H, (0, v, None))\n",
+        "    while H:\n",
+        "        [dist_xv, x, p] = heappop(H)\n",
+        "        if not x in P:\n",
+        "            P[x] = [p, dist_xv]\n",
+        "            for t in G.adjacents(x): #Calcula as distancia entre v e t(atual)\n",
+        "                dist_vt = dist_xv + G.getEdge(x,t)\n",
+        "                if not t in P or dist_vt < P[t][1]:\n",
+        "                    heappush(H, (dist_vt, t, x)) #adiciona as novas distâncias\n",
+        "    return shortestPath(v,u,P)\n",
         "  "
       ],
-      "execution_count": 22,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -160,7 +159,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "484e99e4-b175-46be-c0b6-4ef514ddf68e"
+        "outputId": "ec2e9a4e-78cb-499f-9a68-58b47e8c8abb"
       },
       "source": [
         "g = Graph()\n",
@@ -220,7 +219,7 @@
         "\n",
         "print(\"Parabéns!!! Atividade 5 concluída com sucesso!\")\n"
       ],
-      "execution_count": 23,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
