--- a/Atividade5.ipynb
+++ b/Atividade5.ipynb
@@ -140,16 +140,18 @@
         "    heappush(H, (0, v, None))\n",
         "    while H:\n",
         "        [dist_xv, x, p] = heappop(H)\n",
+        "        if x == u:\n",
+        "            P[x] = [p, dist_xv]\n",
+        "            return shortestPath(v, u, P)\n",
         "        if not x in P:\n",
         "            P[x] = [p, dist_xv]\n",
-        "            for t in G.adjacents(x): #Calcula as distancia entre v e t(atual)\n",
+        "            for t in G.adjacents(x): \n",
         "                dist_vt = dist_xv + G.getEdge(x,t)\n",
         "                if not t in P or dist_vt < P[t][1]:\n",
-        "                    heappush(H, (dist_vt, t, x)) #adiciona as novas distâncias\n",
-        "    return shortestPath(v,u,P)\n",
+        "                    heappush(H, (dist_vt, t, x))\n",
         "  "
       ],
-      "execution_count": 3,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -159,7 +161,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "ec2e9a4e-78cb-499f-9a68-58b47e8c8abb"
+        "outputId": "eb3785e3-1936-460e-bd37-d787ed913379"
       },
       "source": [
         "g = Graph()\n",
@@ -219,7 +221,7 @@
         "\n",
         "print(\"Parabéns!!! Atividade 5 concluída com sucesso!\")\n"
       ],
-      "execution_count": 4,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
