--- a/Atividade3_1.ipynb
+++ b/Atividade3_1.ipynb
@@ -144,8 +144,8 @@
         "    graph = Graph()\n",
         "    orderedEdges = orderEdgeWeights(G)\n",
         "    insertingVertices(G, graph)\n",
-        "    for edge in orderedEdges:\n",
-        "        weight, (origin,destiny) = edge\n",
+        "    while len(graph.edges())//2 < len(G.vertices())-1:\n",
+        "        weight, (origin,destiny) = orderedEdges.pop(0)\n",
         "        if not destiny in dfs(graph, origin):\n",
         "            graph.addEdge(origin, destiny, weight)\n",
         "    return graph\n",
@@ -163,7 +163,6 @@
         "    minHeap = []\n",
         "    for origin in graph.vertices():\n",
         "        for destiny in G.adjacents(origin):\n",
-        "            weight = G.getEdge(origin,destiny)\n",
         "            if not destiny in graph.vertices():\n",
         "                heappush(minHeap, [G.getEdge(origin,destiny), (origin,destiny)])\n",
         "    return heappop(minHeap)\n",
@@ -181,7 +180,7 @@
         "    return graph\n",
         "  "
       ],
-      "execution_count": 25,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -191,7 +190,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "42a6fc69-9c36-4404-df86-fb372295e5e6"
+        "outputId": "9c5bc316-db98-48d5-8250-c38be73b8444"
       },
       "source": [
         "# Graph 1\n",
@@ -257,7 +256,7 @@
         "print(\"Here comes the sun...\")\n",
         "\n"
       ],
-      "execution_count": 26,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
