--- a/Atividade3_1.ipynb
+++ b/Atividade3_1.ipynb
@@ -120,18 +120,20 @@
         "    for vertex in G.vertices():\n",
         "        graph.addVertex(vertex)\n",
         "\n",
-        "def dfsRec(G, v, S, L):\n",
+        "def dfsRec(G, v, destiny, S, found = False):\n",
         "    S.add(v)\n",
         "    for u in G.adjacents(v):\n",
+        "        if destiny == u:\n",
+        "            return True\n",
         "        if not u in S:\n",
-        "            L.append(u)\n",
-        "            dfsRec(G, u, S, L)\n",
+        "            found = dfsRec(G, u, destiny, S, found)\n",
+        "    return found\n",
         "\n",
-        "def dfs(G,v):\n",
+        "def circle(G,v, destiny): #profundidade\n",
         "    S = set()\n",
-        "    L = list() \n",
-        "    dfsRec(G, v, S, L)\n",
-        "    return L\n",
+        "    found = dfsRec(G, v, destiny, S)\n",
+        "    return found\n",
+        "\n",
         "\n",
         "def orderEdgeWeights(G):\n",
         "    edges = []\n",
@@ -146,18 +148,22 @@
         "    insertingVertices(G, graph)\n",
         "    while len(graph.edges())//2 < len(G.vertices())-1:\n",
         "        weight, (origin,destiny) = orderedEdges.pop(0)\n",
-        "        if not destiny in dfs(graph, origin):\n",
+        "        if not circle(graph, origin, destiny):\n",
         "            graph.addEdge(origin, destiny, weight)\n",
         "    return graph\n",
         "\n",
         "\n",
         "#To do *************************************************** Prim's *************************************************** #\n",
         "def smallestEdge(G):\n",
-        "    minHeap = []\n",
-        "    for edge in G.edges():\n",
-        "        origin,destiny = edge\n",
-        "        heappush(minHeap, [G.getEdge(origin,destiny), edge])\n",
-        "    return heappop(minHeap)    \n",
+        "    origin, destiny = G.edges()[0]\n",
+        "    lowerWeight = G.getEdge(origin,destiny)\n",
+        "    for edge in G.edges()[1:]:\n",
+        "        u,v = edge\n",
+        "        weight = G.getEdge(u, v)\n",
+        "        if weight < lowerWeight:\n",
+        "            origin, destiny  = u,v\n",
+        "            lowerWeight = weight\n",
+        "    return lowerWeight, (origin, destiny)\n",
         "\n",
         "def selectEdgeWithLessWeight(G, graph):\n",
         "    minHeap = []\n",
@@ -190,7 +196,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "9c5bc316-db98-48d5-8250-c38be73b8444"
+        "outputId": "8d7b29d2-0383-49c5-f871-a04e74c878b3"
       },
       "source": [
         "# Graph 1\n",
